--- a/static/style.css
+++ b/static/style.css
@@ -6,13 +6,19 @@ body {
     font-family: Roboto, sans-serif;
 }
 
-h1 {
-    font-size: 60px
-}
-
 input {
     width: 400px;
     height: 30px;
     font-size: 20px;
     padding-inline: 6px;
+}
+
+p {
+    font-size: 25px
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
