refactor search_query to q

--- a/templates/search.html
+++ b/templates/search.html
@@ -14,10 +14,10 @@
     Whooooooosh docs
 </p>
 <form action="search" method='get'>
-    <input name="search_query" type="text"/>
+    <input name="q" type="text"/>
 </form>
 <br/>
-<p>Search query: {{search_query}}</p>
+<p>Search query: {{q}}</p>
 {% if relevant_links %}
 <h2>Relevant links:</h2>
 <ul>
