--- a/templates/search.html
+++ b/templates/search.html
@@ -51,7 +51,7 @@
                     <div class="mb-8">
                         <h2 class="text-xl mb-1">
                             <a href="{{ result.url }}" class="text-blue-700 hover:underline">
-                                {{ result.title or result.url }}
+                                {{ result.title | safe }}
                             </a>
                         </h2>
                         <p class="text-sm text-green-700 mb-1">{{ result.url }}</p>
